#63 fix overflow of ui-dialog css class

--- a/main/view/src/main/webapp/static/less/coceso.less
+++ b/main/view/src/main/webapp/static/less/coceso.less
@@ -48,6 +48,9 @@ body {
 }
 
 .ui-dialog {
+  // Do not hide overflow, to enable popovers inside of a dialog.
+  overflow: visible;
+
   .ui-dialog-titlebar {
     font-size: 13px;
     padding: 3px 60px 5px 5px;
